# HIQ

./: .gitignore  Cargo.toml  README.md
crates/hiq-hal/: Cargo.toml
crates/hiq-hal/src/: auth.rs  lib.rs
crates/hiq-python/: Cargo.toml  README.md  pyproject.toml
crates/hiq-python/python/hiq/: __init__.py
crates/hiq-python/src/: circuit.rs  error.rs  lib.rs
crates/hiq-python/tests/: test_circuit.py  test_compile.py
crates/hiq-sched/: Cargo.toml
crates/hiq-sched/src/: error.rs  job.rs  lib.rs  matcher.rs  queue.rs  scheduler.rs  workflow.rs
crates/hiq-sched/src/pbs/: templates.rs
crates/hiq-sched/src/persistence/: json_store.rs  sqlite_store.rs
crates/hiq-sched/src/slurm/: adapter.rs  parser.rs  templates.rs
demos/: Cargo.toml
demos/lumi-hybrid/: Cargo.toml  README.md
demos/lumi-hybrid/scripts/: plot_results.py
demos/lumi-hybrid/slurm/: classical_job.sh  quantum_job.sh  vqe_workflow.sh
demos/lumi-hybrid/src/: ansatz.rs  hamiltonian.rs  main.rs  optimizer.rs  quantum_worker.rs
demos/src/: lib.rs
demos/src/circuits/: grover.rs  mod.rs  qaoa.rs  vqe.rs
demos/src/optimizers/: cobyla.rs  mod.rs
demos/src/problems/: hamiltonian.rs  maxcut.rs  mod.rs  molecules.rs
demos/src/runners/: benchmark.rs  mitigation.rs  mod.rs  orchestrator.rs  qaoa.rs  scheduled.rs  vqe.rs
demos/tests/: integration_tests.rs
docs/: development-session-phase4-release.md
grpc-client/: MIGRATION_GUIDE.md  README.md
